# competition-scout

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.hiivmind/github/: config.yaml
lib/schemas/: competition.yaml
skills/comp-scout-analyze/: SKILL.md
skills/comp-scout-compose/: SKILL.md
skills/comp-scout-daily/: SKILL.md
skills/comp-scout-notify/: notifier.py
skills/comp-scout-persist/: SKILL.md
skills/comp-scout-scrape/: SKILL.md  scraper.py
