[project]
name = "competition-scout"
version = "0.1.0"
description = "Claude Code skills for competition scraping and entry composition"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
